--- a/src/views/gins.html
+++ b/src/views/gins.html
@@ -6,16 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="Comprá productos de GinHouse por internet. Tenemos el mayor catalogo de gins y ginebras nacionales, artesanales, small batch e importados. Hacé tu pedido y pagalo online.">
+    <meta name="description"
+        content="Comprá productos de GinHouse por internet. Tenemos el mayor catalogo de gins y ginebras nacionales, artesanales, small batch e importados. Hacé tu pedido y pagalo online.">
 
     <!-- Keywords -->
-    <meta name="keywords" content="Gin, Ginebra, Tónica, Small batch, Beefeater, Tanqueray, Argentina, importado, alcohol, martini, artesanal, cata, tonic, destilado, whisky, vino, wine, craft. bebida, Bombay">
+    <meta name="keywords"
+        content="Gin, Ginebra, Tónica, Small batch, Beefeater, Tanqueray, Argentina, importado, alcohol, martini, artesanal, cata, tonic, destilado, whisky, vino, wine, craft. bebida, Bombay">
 
-     <!-- Open graph -->
-     <meta property="og:title" content="Tienda Online de GinHouse - Tu tienda de Gin">
-     <meta property="og:description" content="Comprá productos de GinHouse por internet. Tenemos gins nacionales, artesanales, e importados. Contamos con la mayor variedad de aguas tónicas. Hacé tu pedido y pagalo online.">
-     <meta property="og:image" content="url a insertar"> 
-     <!-- cuando la suba será completada la url -->
+    <!-- Open graph -->
+    <meta property="og:title" content="Tienda Online de GinHouse - Tu tienda de Gin">
+    <meta property="og:description"
+        content="Comprá productos de GinHouse por internet. Tenemos gins nacionales, artesanales, e importados. Contamos con la mayor variedad de aguas tónicas. Hacé tu pedido y pagalo online.">
+    <meta property="og:image" content="url a insertar">
+    <!-- cuando la suba será completada la url -->
 
     <!-- Fuente -->
 
@@ -29,7 +32,7 @@
     <!-- CSS -->
 
     <link rel="stylesheet" href="../../css/style.css">
-    
+
     <!-- Favicon -->
 
     <link rel="shortcut icon" href="../../src/assets/img/favicon.ico" type="image/x-icon">
@@ -44,13 +47,14 @@
         <!-- Navbar -->
         <nav class="navbar sticky-top navbar-expand-xl navbar-dark bg-nav">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../../index.html"><img src="../assets/img/logo.png" alt="GinHouse" width="50%"></a>
+                <a class="navbar-brand" href="../../index.html"><img src="../assets/img/logo.png" alt="GinHouse"
+                        width="50%"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarDark"
                     aria-controls="navbarDark" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse show" id="navbarDark">
-                  
+
                     <ul class="navbar-nav ms-auto mb-2 mb-xl-0">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="../../index.html">Home</a>
@@ -61,7 +65,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="../../index.html#productos">Productos</a>
                         </li>
-                       <li class="nav-item">
+                        <li class="nav-item">
                             <a class="nav-link" href="../views/contact.html">Contacto</a>
                         </li>
 
@@ -80,12 +84,13 @@
                 <h2 class="titulo">Gins</h2>
             </div>
             <div class="row">
-                
+
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="container-producto">
                         <div class="contenido-producto">
                             <div class="img-container">
-                                <img class="img-producto" src="../assets/img/producto1.jpg" alt="Heraclito">
+                                <img class="img-producto" src="../assets/img/producto1.jpg" alt="Heraclito"
+                                    data-bs-toggle="modal" data-bs-target="#modalproducto1">
                             </div>
                             <div class="boton-producto">
                                 <button type="button" class="boton-cart"> add to cart
@@ -108,7 +113,8 @@
                     <div class="container-producto">
                         <div class="contenido-producto">
                             <div class="img-container">
-                                <img class="img-producto" src="../assets/img/producto2.jpg" alt="Monkey 47">
+                                <img class="img-producto" src="../assets/img/producto2.jpg" alt="Monkey 47"
+                                    data-bs-toggle="modal" data-bs-target="#modalproducto2">
                             </div>
                             <div class="boton-producto">
                                 <button type="button" class="boton-cart"> add to cart
@@ -130,7 +136,7 @@
                     <div class="container-producto">
                         <div class="contenido-producto">
                             <div class="img-container">
-                                <img class="img-producto" src="../assets/img/producto3.jpg" alt="Gin Mare">
+                                <img class="img-producto" src="../assets/img/producto3.jpg" alt="Gin Mare" data-bs-toggle="modal" data-bs-target="#modalproducto3">
                             </div>
                             <div class="boton-producto">
                                 <button type="button" class="boton-cart"> add to cart
@@ -151,49 +157,140 @@
             </div>
         </div>
 
-    </section>
 
-  <!-- footer  -->
-
-  <footer>
-
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12 col-md-8 col-lg-7">
-
-                <nav class="redes-sociales">
-                    <!-- Iconos con links de rrss y contacto -->
-                    <h4>Nuestros medios de contacto</h4>
-                    <ul class="social-networks round to-diamond">
-
-                        <li><a href="https://twitter.com/" class="icon-twitter">Twitter</a></li>
-                        <li><a href="https://www.facebook.com/" class="icon-facebook">Facebook</a></li>
-                        <li><a href="https://instagram.com" class="icon-instagram">Instagram</a></li>
-                        <li><a href="" class="icon-whatsapp">WhatsApp</a></li>
-
-                    </ul>
-
-                </nav>
-            </div>
-            
-            
-            <div class="col-sm-12 col-md-4 col-lg-5">
-                <nav class="datos-contacto">
-                    <!-- direccion y horario -->
-
-                    <p> Balcarce 50, Ciudad Autónoma de Buenos Aires</p>
-                    <p> CP 1222</p>
-                    <p>Horario de atención:</p>
-                    <p> L- V 9:00 - 20:00 hs.</p>
-                    <p>Sab 10:00 -20:00 hs.</p>
+        <!-- Modal1 -->
+        <div class="modal fade" id="modalproducto1" tabindex="-1" aria_hidden="true" aria-labelledby="modalTitle">
+            <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                <div class="modal-content">
+                    <div class="modal-header py-lg-0">
+                        <h5 class="modal-title titulo" id="modalTitle">Gin Heraclito</h5>
+                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                            aria-labelled="close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <ul>
+                            <li>Origen: Buenos Aires,Argentina</li>
+                            <li>Botánicos: 13</li>
+                            <li>Nota de cata: Aromaticamente brinda una salida firme de enebro y coriandro que se
+                                combina con notras citircas provenientes de componentes como limón, la lima y la naranja
+                                Curazao. En boca es aterciopelado, con buen volumen y surgen notas complejas donde se
+                                destacan la menta y el romero.</li>
+                            <li>ABV: 41%</li>
+                        </ul>
 
 
-                </nav>
+                    </div>
+
+                </div>
             </div>
         </div>
-    </div>
 
-</footer>
+        <!-- Modal2 -->
+        <div class="modal fade" id="modalproducto2" tabindex="-1" aria_hidden="true" aria-labelledby="modalTitle">
+            <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                <div class="modal-content">
+                    <div class="modal-header py-lg-0">
+                        <h5 class="modal-title titulo" id="modalTitle">Gin Monkey 47</h5>
+                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                            aria-labelled="close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <ul>
+                            <li>Origen: Schwarzwald,Alemania</li>
+                            <li>Botánicos: 47</li>
+                            <li>Nota de cata: De los 47 ingredientes que son parte del nombre del gin, la mayoría
+                                pertenece a
+                                la Selva Negra. Hay almendras, pimienta de Jamaica, menta, pomelo chino, sauco,
+                                espino navarro, naranja, clavo, mora, salvia, regaliz, rosa mosqueta, flores de
+                                acacia, jengibre, jazmín, manzanilla, nuez moscada, hibisco, angélica, lavanda,
+                                coriandro, granos de paraíso, monarda, pícea de Noruega, canela, verbena,
+                                arándanos, arándanos rojos, cubeba, cardamomo, quassia, rosa canina, lima
+                                keffir, melisa, raíz de iris, endrinas, lemongrass, rosa de Siria, raíz de
+                                cálamo.</li>
+                            <li>ABV: 47%</li>
+                        </ul>
+
+
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+          <!-- Modal3 -->
+          <div class="modal fade" id="modalproducto3" tabindex="-1" aria_hidden="true" aria-labelledby="modalTitle">
+            <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                <div class="modal-content">
+                    <div class="modal-header py-lg-0">
+                        <h5 class="modal-title titulo" id="modalTitle">Gin Mare</h5>
+                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                            aria-labelled="close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <ul>
+                            <li>Origen: Schwarzwald,España</li>
+                            <li>Botánicos: 47</li>
+                            <li>Nota de cata: Destilado con oliva, tomillo, romero, cardamomo, coriandro, albahaca y bayas de enebro.
+                                Importado de España, hecho con aguas del mediterráneo .
+                                
+                                En nariz, Gin Mare nos ofrece interesantes y poco comunes para una ginebra: notas verdes de albahaca, notas herbales de romero y tomillo, puntas cítricas y aromas de enebro.
+                                
+                                En boca, gin Mare sigue abriendo su corazón mediterráneo: predominan las notas verdes perfectamente integradas con las hierbas aromáticas y puntas especiadas: cardamomo y cítricos muy bien ensamblados.</li>
+                            <li>ABV: 42.7%</li>
+                        </ul>
+
+
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+
+
+    </section>
+
+    <!-- footer  -->
+
+    <footer>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 col-md-8 col-lg-7">
+
+                    <nav class="redes-sociales">
+                        <!-- Iconos con links de rrss y contacto -->
+                        <h4>Nuestros medios de contacto</h4>
+                        <ul class="social-networks round to-diamond">
+
+                            <li><a href="https://twitter.com/" class="icon-twitter">Twitter</a></li>
+                            <li><a href="https://www.facebook.com/" class="icon-facebook">Facebook</a></li>
+                            <li><a href="https://instagram.com" class="icon-instagram">Instagram</a></li>
+                            <li><a href="" class="icon-whatsapp">WhatsApp</a></li>
+
+                        </ul>
+
+                    </nav>
+                </div>
+
+
+                <div class="col-sm-12 col-md-4 col-lg-5">
+                    <nav class="datos-contacto">
+                        <!-- direccion y horario -->
+
+                        <p> Balcarce 50, Ciudad Autónoma de Buenos Aires</p>
+                        <p> CP 1222</p>
+                        <p>Horario de atención:</p>
+                        <p> L- V 9:00 - 20:00 hs.</p>
+                        <p>Sab 10:00 -20:00 hs.</p>
+
+
+                    </nav>
+                </div>
+            </div>
+        </div>
+
+    </footer>
 
 
 
