--- a/src/views/tonicas.html
+++ b/src/views/tonicas.html
@@ -6,17 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="Comprá productos de GinHouse por internet. Tenemos la mayor variedad de Aguas y gaseosas tónicas nacionales e importadas para que armes tus gin tonic. Hacé tu pedido y pagalo online.">
+    <meta name="description"
+        content="Comprá productos de GinHouse por internet. Tenemos la mayor variedad de Aguas y gaseosas tónicas nacionales e importadas para que armes tus gin tonic. Hacé tu pedido y pagalo online.">
 
     <!-- Keywords -->
-    <meta name="keywords" content="Gin, Ginebra, Tónica, Small batch, Beefeater, Tanqueray, Argentina, importado, alcohol, martini, artesanal, cata, tonic, destilado, whisky, vino, wine, craft. bebida, Bombay">
+    <meta name="keywords"
+        content="Gin, Ginebra, Tónica, Small batch, Beefeater, Tanqueray, Argentina, importado, alcohol, martini, artesanal, cata, tonic, destilado, whisky, vino, wine, craft. bebida, Bombay">
 
     <!-- Open graph -->
     <meta property="og:title" content="Tienda Online de GinHouse - Tu tienda de Gin">
-    <meta property="og:description" content="Comprá productos de GinHouse por internet. Tenemos gins nacionales, artesanales, e importados. Contamos con la mayor variedad de aguas tónicas. Hacé tu pedido y pagalo online.">
-    <meta property="og:image" content="url a insertar"> 
+    <meta property="og:description"
+        content="Comprá productos de GinHouse por internet. Tenemos gins nacionales, artesanales, e importados. Contamos con la mayor variedad de aguas tónicas. Hacé tu pedido y pagalo online.">
+    <meta property="og:image" content="url a insertar">
     <!-- cuando la suba será completada la url -->
-     
+
     <!-- Fuente -->
 
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
@@ -29,7 +32,7 @@
     <!-- CSS -->
 
     <link rel="stylesheet" href="../../css/style.css">
-   
+
     <!-- Favicon -->
 
     <link rel="shortcut icon" href="../../src/assets/img/favicon.ico" type="image/x-icon">
@@ -43,13 +46,14 @@
         <!-- Navbar -->
         <nav class="navbar sticky-top navbar-expand-xl navbar-dark bg-nav">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../../index.html"><img src="../assets/img/logo.png" alt="GinHouse" width="50%"></a>
+                <a class="navbar-brand" href="../../index.html"><img src="../assets/img/logo.png" alt="GinHouse"
+                        width="50%"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarDark"
                     aria-controls="navbarDark" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse show" id="navbarDark">
-                   
+
                     <ul class="navbar-nav ms-auto mb-2 mb-xl-0">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="../../index.html">Home</a>
@@ -60,7 +64,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="../../index.html#productos">Productos</a>
                         </li>
-                       <li class="nav-item">
+                        <li class="nav-item">
                             <a class="nav-link" href="../views/contact.html">Contacto</a>
                         </li>
 
@@ -83,7 +87,8 @@
                     <div class="container-producto">
                         <div class="contenido-producto">
                             <div class="img-container">
-                                <img class="img-producto" src="../assets/img/tonica1.jpg" alt="Tonica">
+                                <img class="img-producto" src="../assets/img/tonica1.jpg" alt="Tonica"
+                                    data-bs-toggle="modal" data-bs-target="#modaltonica1">
                             </div>
                             <div class="boton-producto">
                                 <button type="button" class="boton-cart"> add to cart
@@ -107,7 +112,8 @@
                     <div class="container-producto">
                         <div class="contenido-producto">
                             <div class="img-container">
-                                <img class="img-producto" src="../assets/img/tonica2.jpg" alt="Tonica">
+                                <img class="img-producto" src="../assets/img/tonica2.jpg" alt="Tonica"
+                                    data-bs-toggle="modal" data-bs-target="#modaltonica2">
                             </div>
                             <div class="boton-producto">
                                 <button type="button" class="boton-cart"> add to cart
@@ -131,7 +137,8 @@
                     <div class="container-producto">
                         <div class="contenido-producto">
                             <div class="img-container">
-                                <img class="img-producto" src="../assets/img/tonica3.jpg" alt="Tonica">
+                                <img class="img-producto" src="../assets/img/tonica3.jpg" alt="Tonica"
+                                    data-bs-toggle="modal" data-bs-target="#modaltonica3">
                             </div>
                             <div class="boton-producto">
                                 <button type="button" class="boton-cart"> add to cart
@@ -154,7 +161,8 @@
                     <div class="container-producto">
                         <div class="contenido-producto">
                             <div class="img-container">
-                                <img class="img-producto" src="../assets/img/tonica4.jpg" alt="Tonica">
+                                <img class="img-producto" src="../assets/img/tonica4.jpg" alt="Tonica"
+                                    data-bs-toggle="modal" data-bs-target="#modaltonica4">
                             </div>
                             <div class="boton-producto">
                                 <button type="button" class="boton-cart"> add to cart
@@ -175,10 +183,132 @@
                 </div>
             </div>
 
+        </div>
+
+        <!-- Modal1 -->
+        <div class="modal fade" id="modaltonica1" tabindex="-1" aria_hidden="true" aria-labelledby="modalTitle">
+            <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                <div class="modal-content">
+                    <div class="modal-header py-lg-0">
+                        <h5 class="modal-title titulo" id="modalTitle">Britvic - Indian Tonic Water</h5>
+                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                            aria-labelled="close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <ul>
+                            <li>Origen: Hemel Hempstead,Reino Unido</li>
+                            <li>Britvic es una línea de mixers premium y soft drinks importados desde el Reino Unido,
+                                diseñados para complementar bebidas y cocktails. Llevan el sello Royal Warrant,
+                                distinción otorgada por la Reina Isabel II que los acredita como proveedores en la Casa
+                                Real. La línea recibió premios internacionales como el Superior Taste Award del
+                                International Taste & Quality Institute de Bruselas y el Oro en el Bartenders Brand
+                                Award de Class Magazine. Y su Tónica fue elegida como la ideal para preparar Gin Tonic
+                                en distintas pruebas realizadas entre especialistas, entre ellas la de Imbibe Magazine
+                            </li>
+                        </ul>
 
 
+                    </div>
 
-            
+                </div>
+            </div>
+
+        </div>
+
+        <!-- Modal2 -->
+
+         <div class="modal fade" id="modaltonica2" tabindex="-1" aria_hidden="true" aria-labelledby="modalTitle">
+            <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                <div class="modal-content">
+                    <div class="modal-header py-lg-0">
+                        <h5 class="modal-title titulo" id="modalTitle">Britvic - Ginger Ale</h5>
+                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                            aria-labelled="close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <ul>
+                            <li>Origen: Hemel Hempstead,Reino Unido</li>
+                            <li>Britvic es una línea de mixers premium y soft drinks importados desde el Reino Unido,
+                                diseñados para complementar bebidas y cocktails. Llevan el sello Royal Warrant,
+                                distinción otorgada por la Reina Isabel II que los acredita como proveedores en la Casa
+                                Real. La línea recibió premios internacionales como el Superior Taste Award del
+                                International Taste & Quality Institute de Bruselas y el Oro en el Bartenders Brand
+                                Award de Class Magazine. Y su Tónica fue elegida como la ideal para preparar Gin Tonic
+                                en distintas pruebas realizadas entre especialistas, entre ellas la de Imbibe Magazine
+                            </li>
+                        </ul>
+
+
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+
+         <!-- Modal3 -->
+
+         <div class="modal fade" id="modaltonica3" tabindex="-1" aria_hidden="true" aria-labelledby="modalTitle">
+            <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                <div class="modal-content">
+                    <div class="modal-header py-lg-0">
+                        <h5 class="modal-title titulo" id="modalTitle">Britvic - Ginger Beer</h5>
+                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                            aria-labelled="close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <ul>
+                            <li>Origen: Hemel Hempstead,Reino Unido</li>
+                            <li>Britvic es una línea de mixers premium y soft drinks importados desde el Reino Unido,
+                                diseñados para complementar bebidas y cocktails. Llevan el sello Royal Warrant,
+                                distinción otorgada por la Reina Isabel II que los acredita como proveedores en la Casa
+                                Real. La línea recibió premios internacionales como el Superior Taste Award del
+                                International Taste & Quality Institute de Bruselas y el Oro en el Bartenders Brand
+                                Award de Class Magazine. Y su Tónica fue elegida como la ideal para preparar Gin Tonic
+                                en distintas pruebas realizadas entre especialistas, entre ellas la de Imbibe Magazine
+                            </li>
+                        </ul>
+
+
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+
+         <!-- Modal4 -->
+
+         <div class="modal fade" id="modaltonica4" tabindex="-1" aria_hidden="true" aria-labelledby="modalTitle">
+            <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                <div class="modal-content">
+                    <div class="modal-header py-lg-0">
+                        <h5 class="modal-title titulo" id="modalTitle">Britvic - Cranberry Juice</h5>
+                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                            aria-labelled="close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <ul>
+                            <li>Origen: Hemel Hempstead,Reino Unido</li>
+                            <li>Britvic es una línea de mixers premium y soft drinks importados desde el Reino Unido,
+                                diseñados para complementar bebidas y cocktails. Llevan el sello Royal Warrant,
+                                distinción otorgada por la Reina Isabel II que los acredita como proveedores en la Casa
+                                Real. La línea recibió premios internacionales como el Superior Taste Award del
+                                International Taste & Quality Institute de Bruselas y el Oro en el Bartenders Brand
+                                Award de Class Magazine. Y su Tónica fue elegida como la ideal para preparar Gin Tonic
+                                en distintas pruebas realizadas entre especialistas, entre ellas la de Imbibe Magazine
+                            </li>
+                        </ul>
+
+
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+
+
     </section>
 
 
@@ -204,8 +334,8 @@
 
                     </nav>
                 </div>
-                
-                
+
+
                 <div class="col-sm-12 col-md-4 col-lg-5">
                     <nav class="datos-contacto">
                         <!-- direccion y horario -->
