--- a/css/style.css
+++ b/css/style.css
@@ -586,12 +586,6 @@ footer div div nav ul li {
   margin-left: 40%;
 }
 
-.parrafo-eventos {
-  margin-top: -30%;
-  margin-left: 55%;
-  margin-bottom: 5%;
-}
-
 .titulo {
   text-align: center;
   font-size: 2rem;
@@ -642,7 +636,7 @@ h4 {
   background-color: black;
 }
 
-.modal-content, .parrafo-home, .parrafo-eventos {
+.modal-content, .parrafo-home {
   background-color: rgba(143, 150, 189, 0.6);
   color: #e9e9e9;
   padding: 15px 15px 15px 15px;
@@ -724,6 +718,10 @@ h4 {
   100% {
     background-position: 0 0;
   }
+}
+.modal-body ul li {
+  list-style-type: none;
+  font-size: 1rem;
 }
 
 /*# sourceMappingURL=style.css.map */
