--- a/scss/base/_animations.scss
+++ b/scss/base/_animations.scss
@@ -101,7 +101,7 @@
   }
 }
 
-// Animacion productos
+// Animacion seccion productos
 
 @media screen and (min-width: 426px) {
   .card-container {
@@ -227,7 +227,7 @@
   }
 }
 
-//Animacion rrss
+//Animacion iconos rrss
 
 @font-face {
   font-family: "icomoon";
