--- a/scss/components/_extends.scss
+++ b/scss/components/_extends.scss
@@ -1,3 +1,4 @@
+//Estilos del Background
 %background-section {
   background-repeat: no-repeat;
   background-size: cover;
@@ -7,6 +8,7 @@
   background-color: black;
 }
 
+//Estilo de los parrafos
 %parrafos-main {
   background-color: rgba(143, 150, 189, 0.6);
   color: rgb(233 233 233);
