--- a/src/views/tonicas.html
+++ b/src/views/tonicas.html
@@ -41,7 +41,7 @@
 
 <body>
 
-    <header>
+    <header class="sticky-top">
 
         <!-- Navbar -->
         <nav class="navbar sticky-top navbar-expand-xl navbar-dark bg-nav">
