--- a/src/views/gins.html
+++ b/src/views/gins.html
@@ -42,7 +42,7 @@
 
 <body>
 
-    <header>
+    <header class="sticky-top">
 
         <!-- Navbar -->
         <nav class="navbar sticky-top navbar-expand-xl navbar-dark bg-nav">
